# weather-station

./: .gitignore  README.md
weather-station/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
weather-station/main/: CMakeLists.txt  weather-station.c
